search fix
